Change services and rename utility class

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 
 <div class="container">
   <div class="intro">
-    <div class="intro-left simple-flexbox">
+    <div class="intro-left centered-flexbox">
       <div>
         <h1>renodor</h1>
-        <h2>Fullstack Web Developer, specialized in Ruby on Rails</h2>
-        <p>I build cool web applications. I also have a strong experience in digital marketing and love to draw nice illustrations. I can help you design, code and promote all your digital content.</p>
+        <h2>Fullstack web developer, specialized in Ruby on Rails</h2>
+        <p>I build cool web applications. I can help you design and code all your digital content. Currently working full time as a Rails developper for <a href="https://www.bspk.com/" target="_blank">BSPK</a>.</p>
       </div>
     </div>
     <div class="intro-right">
@@ -15,15 +15,14 @@
 
   <div class="section" id="services">
     <h2 class="title">Services</h2>
-    <div class="service-cards simple-flexbox">
+    <div class="service-cards">
       <div class="service">
-        <i class="fas fa-code"></i><br><p>Web<br>Development</p>
+        <i class="fa-solid fa-code"></i>
+        <p>Backend<br />web development</p>
       </div>
       <div class="service">
-        <i class="fas fa-chart-bar"></i><br><p>Digital<br>Marketing</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-pencil-alt"></i><br><p>Graphic<br>Design</p>
+        <i class="fa-solid fa-pencil"></i>
+        <p>Frontend<br />web development</p>
       </div>
     </div>
   </div>
