--- a/app/assets/stylesheets/components/_service_cards.scss
+++ b/app/assets/stylesheets/components/_service_cards.scss
@@ -1,20 +1,27 @@
-.service {
-  background-color:white;
-  flex-basis: 25%;
-  text-align: center;
-  padding: 30px;
-  margin: 0px 10px;
-  border: 2px solid #323232;
-  box-shadow: 6px 4px 1px $green;
-  // max-width: 170px;
-  border-radius: 5px;
-  p {
-    margin-bottom: 0px;
-  }
-  i {
-    color: $green;
-    font-size: 30px;
-    margin-bottom: 10px;
+.service-cards {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+  .service {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-basis: 30%;
+    row-gap: 15px;
+    padding: 30px;
+    border: 2px solid #323232;
+    box-shadow: 6px 4px 1px $green;
+    min-height: 160px;
+    border-radius: 5px;
+    p {
+      margin-bottom: 0px;
+      text-align: center;
+    }
+    i {
+      color: $green;
+      font-size: 30px;
+    }
   }
 }
 
