--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-    <div class="alert alert-warning alert-dismissible simple-flexbox" role="alert">
+    <div class="alert alert-warning alert-dismissible centered-flexbox" role="alert">
       <p><%= notice %></p>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     </div>
