Create Service model

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -4,9 +4,7 @@
     <%= f.input :description %>
     <%= f.input :url %>
     <%= f.input :order %>
-    <%= f.input :web_development %>
-    <%= f.input :marketing %>
-    <%= f.input :graphic_design %>
+    <%= f.input :service_ids, collection: Service.all, include_hidden: false, include_blank: false, input_html: { multiple: true } %>
     <%= f.input :technologies %>
     <%= f.input :cover_photo, as: :file %>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
