Display services to HP and add github repo to projects

--- a/app/assets/stylesheets/components/_project_show.scss
+++ b/app/assets/stylesheets/components/_project_show.scss
@@ -18,6 +18,11 @@
   .project-show-info {
     flex-basis: 40%;
     margin-right: 30px;
+
+    i {
+      width: 20px;
+      margin-right: 5px;
+    }
   }
   .project-show-cover-photo {
     flex-basis: 60%;
