--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,11 +6,14 @@
         <% if @project.url.present? %>
           <p><i class="fas fa-external-link-alt"></i> <%= link_to "Visit website", @project.url, target: "_blank" %></p>
         <% end %>
+        <% if @project.github_repo.present? %>
+          <p><i class="fa-brands fa-github"></i> <%= link_to "Check Github repo", @project.github_repo_url, target: "_blank" %></p>
+        <% end %>
         <p class="description"><%= raw @project.description %></p>
         <p><b>What I did on this project</b></p>
         <ul class="list-unstyled">
           <% @services.each do |service| %>
-            <li><i class="<%= service.icon %>"></i><%= service.name %></li>
+            <li><%= service.icon_tag %> <%= service.name %></li>
           <% end %>
         </ul>
 
