--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,8 +8,9 @@
         <p>I build cool web applications. I can help you design and code all your digital content. Currently working full time as a Rails developper for <a href="https://www.bspk.com/" target="_blank">BSPK</a>.</p>
       </div>
     </div>
-    <div class="intro-right">
-      <%= image_tag("renodor-avatar.png") %>
+    <div class="intro-right avatars">
+      <%= image_tag "renodor-avatar-shadows.png", class: "avatar-shadows" %>
+      <%= image_tag "renodor-avatar-strokes.png", class: "avatar-strokes" %>
     </div>
   </div>
 
