Fix projects/edit page

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -15,7 +15,7 @@
     %>
     <%=
       f.input :technology_ids,
-      label: 'Technologies'
+      label: 'Technologies',
       collection: @technologies,
       include_hidden: false,
       include_blank: false,
