Add github repo field to new project page

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -3,6 +3,7 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :url %>
+    <%= f.input :github_repo %>
     <%= f.input :order %>
     <%=
       f.input :service_ids,
