--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,87 +1,105 @@
 
-<div class="container">
-  <div class="intro">
-    <div class="intro-left centered-flexbox">
+<div class="container mx-auto max-w-[1140px] px-4">
+  <div class="flex justify-around">
+    <div class="flex justify-center items-center w-1/2">
       <div>
-        <h1>renodor</h1>
-        <h2>Fullstack web developer, specialized in Ruby on Rails</h2>
+        <h1 class="mb-8 text-7xl drop-shadow-flashy-green">renodor</h1>
+        <h2 class="mb-2 text-3xl">Fullstack web developer, specialized in Ruby on Rails</h2>
         <p>I build cool web applications. I can help you design and code all your digital content. Currently working full time as a Rails developper for <a href="https://www.bspk.com/" target="_blank">BSPK</a>.</p>
       </div>
     </div>
-    <div class="intro-right avatars">
-      <%= image_tag "renodor-avatar-shadows.png", class: "avatar-shadows" %>
-      <%= image_tag "renodor-avatar-strokes.png", class: "avatar-strokes" %>
+    <div class="flex justify-center items-center w-1/2">
+      <%= image_tag "renodor-avatar-shadows.png" %>
+      <%= image_tag "renodor-avatar-strokes.png", class: "absolute" %>
     </div>
   </div>
 
-  <div class="section" id="services">
-    <h2 class="title">Services</h2>
-    <div class="service-cards">
-      <div class="service">
-        <i class="fa-solid fa-code"></i>
+  <div class="mt-12" id="services">
+    <h2 class="mb-8 drop-shadow-flashy-green-sm text-3xl">Services</h2>
+    <div class="flex items-center gap-5">
+      <div class="p-8 w-[30%] flex flex-col items-center justify-center gap-4 text-center border border-2 border-dark-gray rounded-md shadow-flashy-green">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 stroke-flashy-green">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+        </svg>
         <p>Backend<br />web development</p>
       </div>
-      <div class="service">
-        <i class="fa-solid fa-pencil"></i>
+      <div class="p-8 w-[30%] flex flex-col items-center justify-center gap-4 text-center border border-2 border-dark-gray rounded-md shadow-flashy-green">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-8 fill-flashy-green">
+          <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z" />
+        </svg>
+
         <p>Frontend<br />web development</p>
       </div>
     </div>
   </div>
-  <div class="section" id="projects">
-    <h2 class="title translate-150">Projects</h2>
-    <div class="project-cards">
+  <div class="mt-24" id="projects">
+    <h2 class="mb-8 drop-shadow-flashy-green-sm text-3xl">Projects</h2>
+    <div class="grid grid-cols-2 gap-10 pt-40">
       <% @projects.each do |project| %>
-          <div class="project-card">
-            <div class="project-header">
-              <h3><%= project.name %></h3>
-              <% project.services.each do |service| %>
-                <%= service.icon_tag %>
-              <% end %>
-            </div>
-            <%= cl_image_tag project.cover_photo.key, width: 686, crop: :fit %>
-            <%= link_to "", project_path(project) %>
+        <div class="flex flex-col items-center relative h-[575px] border border-2 border-dark-gray rounded-md odd:-mt-40 overflow-hidden transition-all duration-250 hover:bg-dark-gray hover:text-white hover:shadow-flashy-green group">
+          <div class="pt-10 px-5 pb-5 w-full">
+            <h3 class="text-2xl group-hover:translate-x-4 transition-transform duration-250"><%= project.name %></h3>
+            <% project.services.each do |service| %>
+              <%= service.icon_tag %>
+            <% end %>
           </div>
+          <%= cl_image_tag project.cover_photo.key, width: 686, crop: :fit, class: "max-w-none -rotate-12 translate-y-[20%] transition-transform duration-250 group-hover:translate-y-[10%]" %>
+          <%= link_to "", project_path(project), class: "absolute inset-0" %>
+        </div>
       <% end %>
     </div>
   </div>
 
-  <div class="section" id="contact">
-    <h2 class="title">Get in Touch</h2>
-    <div class="social">
-      <div class="social-icons">
-        <a href="https://www.linkedin.com/in/renauddor/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/renodor" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/Renodor" target="_blank"><i class="fab fa-twitter"></i></a>
-        <i class="fas fa-envelope"></i>
+  <div class="my-24" id="contact">
+    <h2 class="mb-4 drop-shadow-flashy-green-sm text-3xl">Get in Touch</h2>
+    <div class="flex">
+      <a href="https://www.linkedin.com/in/renauddor/" target="_blank" class="py-4 pr-4 group">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" viewBox="0 0 16 16" class="transition-colors group-hover:fill-flashy-green">
+          <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+        </svg>
+      </a>
+      <a href="https://github.com/renodor" target="_blank" class="p-4 group">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" viewBox="0 0 16 16" class="transition-colors group-hover:fill-flashy-green">
+          <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+        </svg>
+      </a>
+      <div class="cursor-pointer p-4 group">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" viewBox="0 0 16 16" class="transition-colors group-hover:fill-flashy-green">
+          <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+        </svg>
       </div>
-      <span class="written-email"></span>
     </div>
-    <div class="contact-form">
-      <%= form_for(@contact, remote: true)  do |f| %>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
-              <%= f.text_field :name, placeholder: "name", class: "form-control"%>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <div class="form-group <%= @email_errors ? 'form-group-error' : '' %>">
-              <%= f.text_field :email, placeholder: "email", class: "form-control" %>
-              <% if @email_errors %>
-                <span class="form-error-message"><%= @email_errors.first %></span>
-              <% end %>
-            </div>
-          </div>
-        </div>
-        <div class="form-group <%= @message_errors ? 'form-group-error' : '' %>">
-          <%= f.text_area :message, placeholder: "message", class: "form-control" %>
-            <% if @message_errors %>
-              <span class="form-error-message"><%= @message_errors.first %></span>
+    <span class="written-email"></span>
+    <div class="mt-2 w-full">
+      <%= form_with model: @contact, class: "w-full" do |f| %>
+        <div class="flex gap-7 mb-4">
+          <%=
+            f.text_field :name,
+            placeholder: "name",
+            class: "w-1/2 border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0"
+          %>
+          <div class="w-1/2 <%= @email_errors ? 'form-group-error' : '' %>">
+            <%=
+              f.text_field :email,
+              placeholder: "email",
+              class: "w-full border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0"
+            %>
+            <% if @email_errors %>
+              <span class="form-error-message"><%= @email_errors.first %></span>
             <% end %>
+          </div>
         </div>
-        <div class="actions">
-          <%= f.submit "SEND", class: "ren-btn" %>
+        <div class="w-full mb-4 <%= @message_errors ? 'form-group-error' : '' %>">
+          <%=
+            f.text_area :message,
+            placeholder: "message",
+            class: "block w-full h-48	border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0"
+          %>
+          <% if @message_errors %>
+            <span class="form-error-message"><%= @message_errors.first %></span>
+          <% end %>
         </div>
+        <%= f.submit "SEND", class: "p-5 w-full bg-flashy-green rounded-md font-bold cursor-pointer hover:shadow-flashy-dark transition duration-250" %>
       <% end %>
     </div>
   </div>
