add smooth scroll

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="scroll-smooth">
   <head>
     <title>renodor - Fullstack Web Developer & Digital Marketing Specialist</title>
     <%= csrf_meta_tags %>
