--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
         <p>I build cool web applications. I can help you design and code all your digital content. Currently working full time as a Rails developper for <a href="https://www.bspk.com/" target="_blank">BSPK</a>.</p>
       </div>
     </div>
-    <div class="flex justify-center items-center w-1/2">
+    <div class="flex justify-center items-center w-1/2 select-none">
       <%= image_tag "renodor-avatar-shadows.png" %>
       <%= image_tag "renodor-avatar-strokes.png", class: "absolute" %>
     </div>
