--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="px-4 py-2 flex justify-center w-full">
+<div class="sm:px-4 py-2 flex justify-center w-full">
   <%= link_to "Home", root_path, class: "flex items-center p-2 text-black/50 hover:text-black/70" %>
   <%= link_to "Services", root_path(anchor: 'services'), class: "flex items-center p-2 text-black/50 hover:text-black/70" %>
   <%= link_to "Projects", root_path(anchor: 'projects'), class: "flex items-center p-2 text-black/50 hover:text-black/70" %>
