--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= favicon_link_tag 'favicon.png'%>
+    <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= render 'shared/navbar' %>
+  <body class="container mx-auto lg:max-w-[1140px] px-4 sm:px-10">
     <%= render 'shared/flashes' %>
+    <%= render 'shared/navbar' %>
     <%= yield %>
   </body>
 </html>
