--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,29 +1,29 @@
 
-<div class="container mx-auto max-w-[1140px] px-4">
-  <div class="flex justify-around">
-    <div class="flex justify-center items-center w-1/2">
+<div>
+  <div class="flex flex-col-reverse items-center justify-around md:flex-row">
+    <div class="flex justify-center items-center w-full md:w-1/2">
       <div>
         <h1 class="mb-8 text-7xl drop-shadow-flashy-green">renodor</h1>
         <h2 class="mb-2 text-3xl">Fullstack web developer, specialized in Ruby on Rails</h2>
         <p>I build cool web applications. I can help you design and code all your digital content. Currently working full time as a Rails developper for <a href="https://www.bspk.com/" target="_blank">BSPK</a>.</p>
       </div>
     </div>
-    <div class="flex justify-center items-center w-1/2 select-none">
+    <div class="relative flex justify-center items-center max-w-64 w-4/5 sm:max-w-none sm:w-1/2 select-none">
       <%= image_tag "renodor-avatar-shadows.png" %>
       <%= image_tag "renodor-avatar-strokes.png", class: "absolute" %>
     </div>
   </div>
 
-  <div class="mt-12" id="services">
+  <div class="mt-12 pt-5" id="services">
     <h2 class="mb-8 drop-shadow-flashy-green-sm text-3xl">Services</h2>
-    <div class="flex items-center gap-5">
-      <div class="p-8 w-[30%] flex flex-col items-center justify-center gap-4 text-center border border-2 border-dark-gray rounded-md shadow-flashy-green">
+    <div class="flex flex-col sm:flex-row items-center gap-5">
+      <div class="p-8 w-full md:w-1/2 lg:w-[30%] flex flex-col items-center justify-center gap-4 text-center border border-2 border-dark-gray rounded-md shadow-flashy-green">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 stroke-flashy-green">
           <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
         </svg>
         <p>Backend<br />web development</p>
       </div>
-      <div class="p-8 w-[30%] flex flex-col items-center justify-center gap-4 text-center border border-2 border-dark-gray rounded-md shadow-flashy-green">
+      <div class="p-8 w-full md:w-1/2 lg:w-[30%] flex flex-col items-center justify-center gap-4 text-center border border-2 border-dark-gray rounded-md shadow-flashy-green">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-8 fill-flashy-green">
           <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z" />
         </svg>
@@ -32,25 +32,26 @@
       </div>
     </div>
   </div>
-  <div class="mt-24" id="projects">
+
+  <div class="mt-24 pt-5" id="projects">
     <h2 class="mb-8 drop-shadow-flashy-green-sm text-3xl">Projects</h2>
-    <div class="grid grid-cols-2 gap-10 pt-40">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-10 md:pt-40">
       <% @projects.each do |project| %>
-        <div class="flex flex-col items-center relative h-[575px] border border-2 border-dark-gray rounded-md odd:-mt-40 overflow-hidden transition-all duration-250 hover:bg-dark-gray hover:text-white hover:shadow-flashy-green group">
+        <div class="flex flex-col items-center relative h-[575px] border border-2 border-dark-gray rounded-md md:odd:-mt-40 overflow-hidden transition-all duration-250 hover:bg-dark-gray hover:text-white shadow-flashy-green md:shadow-none hover:shadow-flashy-green group">
           <div class="pt-10 px-5 pb-5 w-full">
             <h3 class="text-2xl group-hover:translate-x-4 transition-transform duration-250"><%= project.name %></h3>
             <% project.services.each do |service| %>
               <%= service.icon_tag %>
             <% end %>
           </div>
-          <%= cl_image_tag project.cover_photo.key, width: 686, crop: :fit, class: "max-w-none -rotate-12 translate-y-[20%] transition-transform duration-250 group-hover:translate-y-[10%]" %>
+          <%= cl_image_tag project.cover_photo.key, width: 686, crop: :fit, class: "max-w-none -rotate-12 translate-y-[20%] transition-transform duration-250 border-t border-t-2 border-dark-gray md:border-none group-hover:translate-y-[10%]" %>
           <%= link_to "", project_path(project), class: "absolute inset-0" %>
         </div>
       <% end %>
     </div>
   </div>
 
-  <div class="my-24" id="contact">
+  <div class="my-24 pt-5" id="contact">
     <h2 class="mb-4 drop-shadow-flashy-green-sm text-3xl">Get in Touch</h2>
     <div class="flex">
       <a href="https://www.linkedin.com/in/renauddor/" target="_blank" class="py-4 pr-4 group">
@@ -63,40 +64,49 @@
           <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
         </svg>
       </a>
-      <div class="cursor-pointer p-4 group">
+      <div
+        data-controller="email"
+        data-action="click->email#reveal"
+        class="relative flex gap-4 items-center p-4 cursor-pointer group"
+      >
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" viewBox="0 0 16 16" class="transition-colors group-hover:fill-flashy-green">
           <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
         </svg>
+        <span data-email-target="emailSlot" class="opacity-0 transition duration-250 text-sm"></span>
       </div>
     </div>
-    <span class="written-email"></span>
     <div class="mt-2 w-full">
-      <%= form_with model: @contact, class: "w-full" do |f| %>
-        <div class="flex gap-7 mb-4">
+      <%= form_with url: contact_path(anchor: "contact"), class: "w-full" do |f| %>
+        <div class="flex flex-col sm:flex-row items-start gap-4 mb-4">
           <%=
-            f.text_field :name,
+            f.text_field "contact[name]",
             placeholder: "name",
-            class: "w-1/2 border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0"
+            value: @contact.name,
+            class: "w-full sm:w-1/2 border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0"
           %>
-          <div class="w-1/2 <%= @email_errors ? 'form-group-error' : '' %>">
+          <div class="w-full sm:w-1/2">
             <%=
-              f.text_field :email,
+              f.text_field "contact[email]",
               placeholder: "email",
-              class: "w-full border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0"
+              value: @contact.email,
+              data: { invalid: @contact.errors[:email].present? },
+              class: "w-full border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0 data-[invalid='true']:bg-green-100"
             %>
-            <% if @email_errors %>
-              <span class="form-error-message"><%= @email_errors.first %></span>
+            <% if @contact.errors[:email].present? %>
+              <p class="text-sm mt-2"><%= @contact.errors[:email].first.capitalize %></p>
             <% end %>
           </div>
         </div>
-        <div class="w-full mb-4 <%= @message_errors ? 'form-group-error' : '' %>">
+        <div class="w-full mb-4">
           <%=
-            f.text_area :message,
+            f.text_area "contact[message]",
             placeholder: "message",
-            class: "block w-full h-48	border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0"
+            value: @contact.message,
+            data: { invalid: @contact.errors[:message].present? },
+            class: "block w-full h-48	border border-dark-gray border-2 rounded-md focus:shadow-flashy-dark transition duration-250 focus:border-dark-gray focus:ring-0 data-[invalid='true']:bg-green-100"
           %>
-          <% if @message_errors %>
-            <span class="form-error-message"><%= @message_errors.first %></span>
+          <% if @contact.errors[:message].present? %>
+            <p class="text-sm mt-2"><%= @contact.errors[:message].first.capitalize %></p>
           <% end %>
         </div>
         <%= f.submit "SEND", class: "p-5 w-full bg-flashy-green rounded-md font-bold cursor-pointer hover:shadow-flashy-dark transition duration-250" %>
