--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,29 +1,3 @@
-<div class="container mb-5">
-  <%= simple_form_for(@project) do |f| %>
-    <%= f.input :name %>
-    <%= f.input :description %>
-    <%= f.input :url %>
-    <%= f.input :github_repo %>
-    <%= f.input :order %>
-    <%=
-      f.input :service_ids,
-      label: 'Services',
-      collection: @services,
-      include_hidden: false,
-      include_blank: false,
-      input_html: { multiple: true }
-    %>
-    <%=
-      f.input :technology_ids,
-      label: 'Technologies',
-      collection: @technologies,
-      include_hidden: false,
-      include_blank: false,
-      input_html: { multiple: true }
-    %>
-    <%= f.input :cover_photo, as: :file %>
-    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-    <%= f.input :published %>
-    <%= f.submit %>
-  <% end %>
+<div class="my-5">
+  <%= render "form", project: @project, services: @services, technologies: @technologies %>
 </div>
