--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-10">
+<div class="mt-10 mb-24">
   <div class="flex flex-col md:flex-row gap-8 mb-10">
     <div class="md:w-2/5">
       <h2 class="mb-4 drop-shadow-flashy-green-sm text-3xl"><%= @project.name %></h2>
