--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 mb-24">
-  <div class="flex flex-col md:flex-row gap-8 mb-10">
-    <div class="md:w-2/5">
+  <div class="flex flex-col lg:flex-row gap-8 mb-10">
+    <div class="lg:w-2/5">
       <h2 class="mb-4 drop-shadow-flashy-green-sm text-3xl"><%= @project.name %></h2>
       <% if project.url.present? %>
         <div class="flex items-center gap-2 mb-4">
@@ -29,7 +29,7 @@
         <% end %>
       </div>
     </div>
-    <div class="md:w-3/5">
+    <div class="lg:w-3/5">
       <%= link_to project.url, target: "_blank" do %>
         <%= cl_image_tag project.cover_photo.key, width: 648, crop: :fit, class: "border border-1 border-gray-300 rounded-md" %>
       <% end %>
