--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -65,8 +65,9 @@
       </div>
     </div>
     <div class="mt-2 w-full">
-      <%= form_with url: contact_path(anchor: "contact"), class: "w-full" do |f| %>
-        <div class="flex flex-col sm:flex-row items-start gap-4 mb-4">
+      <%= form_with url: contact_path(anchor: "contact"), class: "w-full relative" do |f| %>
+        <%= f.text_field "contact[content]", class: "absolute border-none" %>
+        <div class="relative flex flex-col sm:flex-row items-start gap-4 mb-4">
           <%=
             f.text_field "contact[name]",
             placeholder: "name",
