--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -67,6 +67,7 @@
     <div class="mt-2 w-full">
       <%= form_with url: contact_path(anchor: "contact"), class: "w-full relative" do |f| %>
         <%= f.text_field "contact[content]", class: "absolute border-none" %>
+        <%= f.text_field "contact[email]", class: "absolute border-none" %>
         <div class="relative flex flex-col sm:flex-row items-start gap-4 mb-4">
           <%=
             f.text_field "contact[name]",
@@ -76,7 +77,7 @@
           %>
           <div class="w-full sm:w-1/2">
             <%=
-              f.text_field "contact[email]",
+              f.text_field "contact[mail]",
               placeholder: "email",
               value: @contact.email,
               data: { invalid: @contact.errors[:email].present? },
